--- a/practico3/practico3_regresion1.ipynb
+++ b/practico3/practico3_regresion1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "interested-convertible",
+   "id": "involved-technology",
    "metadata": {},
    "source": [
     "# Tarea 3 - Regresión"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "organizational-realtor",
+   "id": "attractive-subscription",
    "metadata": {},
    "source": [
     "- Di Carlo, Martina\n",
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "stopped-malpractice",
+   "id": "incorrect-china",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "smooth-programmer",
+   "id": "painful-hampton",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "minimal-publicity",
+   "id": "ordered-courtesy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "uniform-finance",
+   "id": "brutal-norwegian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "russian-pricing",
+   "id": "relevant-success",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "colonial-reservation",
+   "id": "brutal-combat",
    "metadata": {},
    "source": [
     "## Dataset train"
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cardiac-pennsylvania",
+   "id": "civic-ambassador",
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "sharing-mouse",
+   "id": "endless-broad",
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "failing-brain",
+   "id": "integrated-angel",
    "metadata": {},
    "outputs": [
     {
@@ -2122,7 +2122,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "confident-consensus",
+   "id": "upset-bottom",
    "metadata": {},
    "outputs": [
     {
@@ -2142,7 +2142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cleared-optimization",
+   "id": "reverse-brake",
    "metadata": {},
    "source": [
     "## Dataset test"
@@ -2151,7 +2151,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "above-waterproof",
+   "id": "dried-herald",
    "metadata": {},
    "outputs": [
     {
@@ -2940,7 +2940,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "surprised-digit",
+   "id": "civil-conservative",
    "metadata": {},
    "outputs": [
     {
@@ -2961,7 +2961,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "heard-gibson",
+   "id": "prospective-analysis",
    "metadata": {},
    "outputs": [
     {
@@ -4146,7 +4146,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "national-experience",
+   "id": "occasional-fashion",
    "metadata": {},
    "outputs": [
     {
@@ -4167,7 +4167,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "alien-membership",
+   "id": "adequate-penetration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4176,7 +4176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "authentic-twist",
+   "id": "level-recovery",
    "metadata": {},
    "source": [
     "### Correlaciones entre los datos"
@@ -4185,7 +4185,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "southeast-overhead",
+   "id": "extra-intranet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4199,7 +4199,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "missing-words",
+   "id": "dirty-warehouse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4210,7 +4210,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "british-title",
+   "id": "ordinary-spirituality",
    "metadata": {},
    "outputs": [
     {
@@ -4240,7 +4240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quarterly-kitty",
+   "id": "stuffed-accounting",
    "metadata": {},
    "source": [
     "### X e y"
@@ -4249,7 +4249,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "angry-taiwan",
+   "id": "capital-watch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4262,7 +4262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "french-toilet",
+   "id": "chinese-ballot",
    "metadata": {},
    "source": [
     "## 1.a"
@@ -4270,7 +4270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "substantial-rider",
+   "id": "imposed-engineer",
    "metadata": {},
    "source": [
     " **1.** Los archivos 'regresion_train.csv' y 'regresion_test.csv' contienen datos para realizar\n",
@@ -4287,7 +4287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "muslim-winter",
+   "id": "independent-diabetes",
    "metadata": {},
    "source": [
     "#### Lasso"
@@ -4296,7 +4296,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "active-plain",
+   "id": "third-pickup",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4306,7 +4306,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "valid-saturday",
+   "id": "australian-puppy",
    "metadata": {},
    "outputs": [
     {
@@ -4352,7 +4352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pacific-weapon",
+   "id": "authentic-august",
    "metadata": {},
    "source": [
     "#### Ridge"
@@ -4361,7 +4361,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "abandoned-transparency",
+   "id": "former-integral",
    "metadata": {},
    "outputs": [
     {
@@ -4407,7 +4407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "outer-dialogue",
+   "id": "thick-virgin",
    "metadata": {},
    "source": [
     "Tanto Ridge como Lasso performan muy mal. Probamos con modelos no paramétricos y no lineales:"
@@ -4415,7 +4415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "inappropriate-tanzania",
+   "id": "animated-clinton",
    "metadata": {},
    "source": [
     "#### Bagging Regressor"
@@ -4424,7 +4424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "architectural-beverage",
+   "id": "mediterranean-hypothetical",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4438,7 +4438,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "wicked-bacteria",
+   "id": "moved-stevens",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4449,7 +4449,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "standard-discharge",
+   "id": "distinct-arrangement",
    "metadata": {},
    "outputs": [
     {
@@ -4483,7 +4483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "herbal-warren",
+   "id": "caroline-relevance",
    "metadata": {},
    "source": [
     "#### RandomForest Regressor"
@@ -4492,7 +4492,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "stretch-terrace",
+   "id": "irish-margin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4507,7 +4507,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "ordinary-hughes",
+   "id": "military-pursuit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4518,7 +4518,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "entire-soccer",
+   "id": "adapted-purse",
    "metadata": {},
    "outputs": [
     {
@@ -4552,7 +4552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "greek-testimony",
+   "id": "incredible-mainland",
    "metadata": {},
    "source": [
     "#### MLP Regressor"
@@ -4561,7 +4561,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "adverse-america",
+   "id": "desirable-montgomery",
    "metadata": {
     "id": "YUuBJwPcXcKL"
    },
@@ -4585,7 +4585,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "proved-crossing",
+   "id": "august-vaccine",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -4647,7 +4647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "international-assault",
+   "id": "congressional-brown",
    "metadata": {},
    "source": [
     "Tanto el bagging del arbol común y el random forest tienen muy buenas performances tanto para train y test. Los scores en train y test estan un poco alejados por lo que podriamos sospechar que existe algo de sobre ajuste. La red neuronal tiene muy mal score de R2 en test."
@@ -4655,7 +4655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "packed-elder",
+   "id": "marked-fighter",
    "metadata": {},
    "source": [
     "## 1.b"
@@ -4663,7 +4663,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "southern-diameter",
+   "id": "honey-damages",
    "metadata": {},
    "source": [
     "&nbsp;&nbsp;&nbsp;&nbsp;**b.** Utilizando la funcion ‘permutation_importance’ de sklearn \n",
@@ -4679,7 +4679,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "atomic-footwear",
+   "id": "major-burden",
    "metadata": {},
    "source": [
     "### Bagging"
@@ -4688,7 +4688,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "identified-compact",
+   "id": "interracial-domestic",
    "metadata": {
     "id": "cfbeaaf7"
    },
@@ -4701,7 +4701,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "popular-juvenile",
+   "id": "transsexual-springer",
    "metadata": {
     "id": "ee0446d0",
     "outputId": "303d690b-2d95-445a-c5dd-a41cdc3a7769"
@@ -4731,7 +4731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nutritional-research",
+   "id": "unlimited-amino",
    "metadata": {},
    "source": [
     "### Lasso"
@@ -4740,7 +4740,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "imperial-synthesis",
+   "id": "tracked-smith",
    "metadata": {
     "id": "cfbeaaf7"
    },
@@ -4758,7 +4758,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "frank-bench",
+   "id": "combined-looking",
    "metadata": {
     "id": "ee0446d0",
     "outputId": "303d690b-2d95-445a-c5dd-a41cdc3a7769"
@@ -4790,7 +4790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "composite-rhythm",
+   "id": "skilled-reserve",
    "metadata": {},
    "source": [
     "### Ridge"
@@ -4799,7 +4799,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "informative-switch",
+   "id": "empty-lighter",
    "metadata": {
     "id": "cfbeaaf7"
    },
@@ -4817,7 +4817,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "protecting-acrylic",
+   "id": "photographic-analysis",
    "metadata": {
     "id": "ee0446d0",
     "outputId": "303d690b-2d95-445a-c5dd-a41cdc3a7769"
@@ -4849,7 +4849,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "played-monroe",
+   "id": "broadband-porter",
    "metadata": {},
    "source": [
     "### Random Forest"
@@ -4858,7 +4858,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "fundamental-stevens",
+   "id": "accurate-domestic",
    "metadata": {
     "id": "cfbeaaf7"
    },
@@ -4876,7 +4876,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "spiritual-nature",
+   "id": "flying-island",
    "metadata": {
     "id": "ee0446d0",
     "outputId": "303d690b-2d95-445a-c5dd-a41cdc3a7769"
@@ -4908,7 +4908,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "progressive-actor",
+   "id": "vietnamese-photographer",
    "metadata": {},
    "source": [
     "### ANN"
@@ -4917,7 +4917,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "norwegian-store",
+   "id": "quantitative-brighton",
    "metadata": {
     "id": "cfbeaaf7"
    },
@@ -4935,7 +4935,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "lovely-parade",
+   "id": "editorial-craft",
    "metadata": {
     "id": "ee0446d0",
     "outputId": "303d690b-2d95-445a-c5dd-a41cdc3a7769"
@@ -4967,7 +4967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "seeing-horizon",
+   "id": "measured-therapist",
    "metadata": {},
    "source": [
     "### Seleccion de variables"
@@ -4975,7 +4975,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "monthly-spider",
+   "id": "outdoor-repeat",
    "metadata": {},
    "source": [
     "Seleccionamos las X_10, X_20 y X_30 que son todas las que en general quedan arriba de todo en el permutation importance y ademas eran las que mas correlacion tenían entre si y con la y."
@@ -4984,7 +4984,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "sitting-fraud",
+   "id": "sorted-franklin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4994,7 +4994,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proud-screening",
+   "id": "asian-wedding",
    "metadata": {},
    "source": [
     "Con estas variables probamos entrenar una red neuronal y vemos su rendimiento:"
@@ -5003,7 +5003,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "civic-ozone",
+   "id": "banner-rouge",
    "metadata": {
     "id": "YUuBJwPcXcKL"
    },
@@ -5027,7 +5027,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "desperate-remainder",
+   "id": "reduced-calendar",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -5076,7 +5076,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "retained-hours",
+   "id": "assigned-chancellor",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -5121,7 +5121,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "ambient-property",
+   "id": "intermediate-occasions",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -5189,7 +5189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "occupied-error",
+   "id": "empty-capability",
    "metadata": {},
    "source": [
     "La comparamos con el Random Forest que tambien nos habia dado buenos resultados, pero con el nuevo dataset:"
@@ -5198,7 +5198,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "athletic-reference",
+   "id": "practical-direction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5213,7 +5213,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "interesting-approach",
+   "id": "described-legislature",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5224,7 +5224,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "fresh-technical",
+   "id": "identified-stadium",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -5273,7 +5273,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "athletic-liechtenstein",
+   "id": "mineral-western",
    "metadata": {},
    "outputs": [
     {
@@ -5295,7 +5295,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "assigned-template",
+   "id": "lonely-patrick",
    "metadata": {},
    "outputs": [
     {
@@ -5316,7 +5316,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "extraordinary-circumstances",
+   "id": "attached-response",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -5356,7 +5356,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "removable-danish",
+   "id": "accomplished-intensity",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -5424,10 +5424,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "limited-replacement",
+   "id": "serial-glance",
    "metadata": {},
    "source": [
-    "El mejor predictor que logramos es el Random Forest. Es muy llamativa la diferencia entre la red neuronal con el dataset entero y la red neuronal con las 3 columnas predictoras relevantes, evidentemente este método se ve muy influenciado ante la presencia de variables aleatoreas, mientras que sabemos que los modelos basados en árboles no lo son."
+    "El mejor predictor que logramos es el Random Forest. Es muy llamativa la diferencia entre la red neuronal con el dataset entero y la red neuronal con las 3 columnas predictoras relevantes, evidentemente este método se ve muy influenciado ante la presencia de variables aleatoreas, mientras que sabemos que los modelos basados en árboles no se ven tan afectados."
    ]
   }
  ],
@@ -5447,7 +5447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
